fix(layout): add overflow-x hidden to fix layout issue

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,5 +1,7 @@
 body {
   font-family: var(--ff-base);
+  overflow-x: hidden;
+  background-color: var(--clr-basic-white);
 }
 
 .logo {
@@ -18,6 +20,7 @@ body {
 .header .header__image-hero {
   width: 100%;
   height: auto;
+  object-fit: cover;
   transform: scale(1.15);
 }
 .header .header__image-left,
@@ -255,6 +258,7 @@ body {
   background-size: cover;
   position: relative;
   margin-block-start: 108px;
+  width: 100%;
 }
 .footer .section__separator {
   position: absolute;
